--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">LanguageSwitcher</string>
+    <string name="app_title">Language</string>
     <string name="select_language">Select Language</string>
     <string name="current_language">Current Language</string>
     <string name="welcome_message">Welcome to Language Switcher App!</string>
